Fix some elements not showing up correctly in AMOLED

--- a/public/stylesheets/new-ui-styles.css
+++ b/public/stylesheets/new-ui-styles.css
@@ -127,6 +127,7 @@ body.t-s9 {
 }
 
 .t-dark .o-sidebar-currency--antimatter,
+.t-amoled .o-sidebar-currency--antimatter,
 .t-s6 .o-sidebar-currency--antimatter,
 .t-s10 .o-sidebar-currency--antimatter {
   animation: a-game-header__antimatter--glow 25s infinite;
@@ -136,7 +137,8 @@ body.t-s9 {
   animation: a-game-header__antimatter--glow-blob 25s infinite;
 }
 
-.t-dark-metro .o-sidebar-currency--antimatter {
+.t-dark-metro .o-sidebar-currency--antimatter,
+.t-amoled-metro .o-sidebar-currency--antimatter {
   color: #e0e0e0;
 }
 
