--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -163,7 +163,7 @@ html {
   --color-text-inverted: black;
   --color-base: #000000;
   --color-disabled: #2d2421;
-  --color-accent: #088189;
+  --color-accent: #2fa6f7;
   --color-notification: yellow;
   --color-overlay: rgba(60, 60, 100, 50%);
 
@@ -181,7 +181,7 @@ html {
   --color-text-inverted: black;
   --color-base: #000000;
   --color-disabled: #2d2421;
-  --color-accent: #088189;
+  --color-accent: #2fa6f7;
   --color-notification: yellow;
   --color-overlay: rgba(60, 60, 100, 50%);
 
@@ -1501,8 +1501,8 @@ br {
   background-color: var(--color-background);
   border: var(--var-border-width, 0.2rem) solid var(--color-text);
   border-radius: var(--var-border-radius, 0.5rem);
-  padding: 0.5rem;
   margin-top: -0.4rem;
+  padding: 0.5rem;
   transition-duration: 0.3s;
   pointer-events: none;
 }
@@ -1525,11 +1525,11 @@ br {
   position: absolute;
   top: 2.8rem;
   right: 100%;
-  border-right: 0 solid black;
   border-top: 0.6rem solid transparent;
+  border-right: 0 solid black;
   border-bottom: 0.6rem solid transparent;
-  transform: translateY(-50%);
   margin-right: 0.1rem;
+  transform: translateY(-50%);
   transition-duration: 0.3s;
 }
 
@@ -2320,6 +2320,7 @@ br {
 }
 
 .t-dark .c-game-header__antimatter,
+.t-amoled .c-game-header__antimatter,
 .t-s6 .c-game-header__antimatter,
 .t-s10 .c-game-header__antimatter {
   animation: a-game-header__antimatter--glow 25s infinite;
@@ -2343,7 +2344,8 @@ br {
   100% { color: #fbc21b; }
 }
 
-.t-dark-metro .c-game-header__antimatter {
+.t-dark-metro .c-game-header__antimatter,
+.t-amoled-metro .c-game-header__antimatter {
   color: #e0e0e0;
 }
 
@@ -4309,6 +4311,12 @@ br {
   background-color: var(--color-bad);
 }
 
+.t-amoled .o-autobuyer-btn--unavailable,
+.t-amoled-metro .o-autobuyer-btn--unavailable {
+  color: #ddd3cc;
+  border-color: var(--color-bad);
+}
+
 .t-dark .o-autobuyer-btn,
 .t-s6 .o-autobuyer-btn,
 .t-s10 .o-autobuyer-btn {
@@ -5414,6 +5422,12 @@ properly on certain themes. */
   transition-duration: 0.2s;
 }
 
+.t-amoled .c-modal,
+.t-amoled-metro .c-modal {
+  border-color: var(--color-good-dark);
+  box-shadow: 0 0 1rem 0.3rem black;
+}
+
 .c-modal--short {
   overflow-y: scroll;
   max-height: 55rem;
@@ -5674,10 +5688,10 @@ properly on certain themes. */
 }
 
 .c-modal-away-progress__resources div {
+  min-width: 55rem;
   border-bottom: 0.1rem solid var(--color-text);
   margin-bottom: 0.2rem;
   padding-bottom: 0.2rem;
-  min-width: 55rem;
   cursor: pointer;
 }
 
@@ -8928,12 +8942,14 @@ kbd {
 
 .c-reality-upgrade-btn--possible {
   color: black;
-  background: repeating-linear-gradient(
-    -45deg,
-    #979729,
-    #979729 3rem,
-    #777722 3rem,
-    #777722 6rem);
+  background:
+    repeating-linear-gradient(
+      -45deg,
+      #979729,
+      #979729 3rem,
+      #777722 3rem,
+      #777722 6rem
+    );
   cursor: default;
 }
 
@@ -8946,12 +8962,12 @@ kbd {
   color: black;
   background: #954040;
   background-image:
-      linear-gradient(45deg, #a55252 25%, transparent 25%), 
-      linear-gradient(135deg, #a55252 25%, transparent 25%),
-      linear-gradient(45deg, transparent 75%, #a55252 75%),
-      linear-gradient(135deg, transparent 75%, #a55252 75%);
-  background-size: 4rem 4rem;
+    linear-gradient(45deg, #a55252 25%, transparent 25%),
+    linear-gradient(135deg, #a55252 25%, transparent 25%),
+    linear-gradient(45deg, transparent 75%, #a55252 75%),
+    linear-gradient(135deg, transparent 75%, #a55252 75%);
   background-position: 0 0, 2rem 0, 2rem -2rem, 0 2rem;
+  background-size: 4rem 4rem;
   cursor: default;
 }
 
@@ -9254,13 +9270,13 @@ input.o-automator-block-input {
 
 .l-h2p-modal {
   display: flex;
+  overflow: hidden;
   flex-direction: column;
   /* stylelint-disable-next-line unit-allowed-list */
   width: calc(100vw - 20vh);
   /* stylelint-disable-next-line unit-allowed-list */
   height: calc(100vh - 20vh);
   margin: 0.5rem;
-  overflow: hidden;
 }
 
 .l-h2p-container {
